[tool.poetry]
name = "steganopy"
version = "0.0.1"
description = "Steganopy"
authors = ["Luong Quang Manh <luongquangmanh85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
